# meerkat

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  LIVE_ADAPTER_ROUND4_TODO.md  MODULE.bazel  Makefile  README.md  SESSION_RUNTIME_R2_R5_TODO.md  SESSION_RUNTIME_SPLIT_TODO.md
.cargo/: config.toml
.claude/agents/: meerkat-rust-zealot.md
.config/: nextest.toml
.github/workflows/: buildbuddy.yml  cargo.yml  ci.yml  live-e2e.yml  release.yml  repair-mini-release-assets.yml
artifacts/: m0_legacy_surface_inventory.txt
artifacts/schemas/: capabilities.json  errors.json  events.json  models.json  params.json  rest-openapi.json  rpc-methods.json  version.json  wire-types.json
docs/: docs.json  quickstart.mdx
docs/api/: mcp.mdx  rest.mdx  rpc.mdx
docs/architecture/: buildbuddy-bazel-poc.md  canonical-lifecycle-v5.md  catalog-authoritative-machine-generation-rct.md  finite-ownership-ledger.md  identity-first-live-voice-proposal.md  machine-simplification-proposal.md  meerkat-dogma-commentary.md  meerkat-dogma.md  meerkat-runtime-schema-parity-ledger.md  mob-runtime-schema-parity-ledger.md
docs/cli/: commands.mdx  configuration.mdx
docs/concepts/: configuration.mdx  providers.mdx  realms.mdx  scheduling.mdx  tools.mdx  workgraph.mdx
docs/examples/: comms.mdx  gallery.mdx  mobs.mdx  skills.mdx  tools.mdx  workgraph.mdx
docs/guides/: cd-and-distribution.md  comms.mdx  image-generation.mdx  mini-surfaces.mdx  mobs.mdx  realms.mdx  realtime.mdx  scheduling.mdx  skills.mdx  workgraph.mdx
docs/reference/: api-reference.mdx  architecture.mdx  builtin-tools.mdx  capability-matrix.mdx  skills-governance-runbook.mdx  skills-reference.mdx  workgraph-reference.mdx
docs/rust/: advanced.mdx  overview.mdx
docs/wave-c-prep/: dogma-blind-spots.md  machine-boundary-stability.md  persistence-migration.md  test-coverage-audit.md  wave-c-plan.md
docs/wave-d-prep/: d-j-staged-session-design.md  wave-d-plan.md
examples/: README.md
meerkat/: BUILD.bazel  Cargo.toml  build.rs
meerkat-agent-build-authority/: BUILD.bazel
meerkat-anthropic/: BUILD.bazel
meerkat-auth-core/: BUILD.bazel
meerkat-capabilities/: BUILD.bazel  Cargo.toml
meerkat-capabilities/src/: lib.rs
meerkat-cli/: BUILD.bazel  Cargo.toml
meerkat-client/: BUILD.bazel  Cargo.toml
meerkat-client/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  openai_live.rs
meerkat-client/src/authorizers/: mod.rs
meerkat-client/src/providers/anthropic/: auth.rs  backend.rs  mod.rs
meerkat-client/src/providers/google/: mod.rs
meerkat-client/src/providers/openai/: auth.rs  mod.rs
meerkat-client/src/runtime/: binding.rs  errors.rs  mod.rs  provider_runtime.rs  registry.rs  resolver.rs
meerkat-client/tests/: azure_ad_authorizer.rs  live_client_provider_matrix.rs  oauth_flow.rs  provider_runtime_registry.rs  token_store_contract.rs
meerkat-comms/: BUILD.bazel  Cargo.toml
meerkat-contracts/: BUILD.bazel  Cargo.toml
meerkat-core/: BUILD.bazel
meerkat-gemini/: BUILD.bazel
meerkat-hooks/: BUILD.bazel  Cargo.toml
meerkat-live/: BUILD.bazel
meerkat-llm-core/: BUILD.bazel
meerkat-machine-codegen/: BUILD.bazel  Cargo.toml
meerkat-machine-derive/: BUILD.bazel
meerkat-machine-dsl/: BUILD.bazel
meerkat-machine-dsl-core/: BUILD.bazel
meerkat-machine-kernels/: BUILD.bazel  Cargo.toml
meerkat-machine-schema/: BUILD.bazel  Cargo.toml
meerkat-mcp/: BUILD.bazel  Cargo.toml
meerkat-mcp-server/: BUILD.bazel  Cargo.toml
meerkat-mcp/src/: lib.rs  (+5 more)
meerkat-memory/: BUILD.bazel  Cargo.toml
meerkat-mob/: BUILD.bazel  Cargo.toml
meerkat-mob-mcp/: BUILD.bazel  Cargo.toml
meerkat-mob-pack/: BUILD.bazel
meerkat-models/: BUILD.bazel
meerkat-openai/: BUILD.bazel
meerkat-providers/: BUILD.bazel  Cargo.toml
meerkat-providers/src/: lib.rs
meerkat-providers/src/providers/anthropic/: mod.rs
meerkat-providers/src/providers/google/: mod.rs
meerkat-providers/src/providers/openai/: mod.rs
meerkat-providers/src/runtime/: errors.rs  provider_runtime.rs  registry.rs
meerkat-providers/tests/: anthropic_oauth_resolve.rs  aws_sts_authorizer.rs  google_auth_authorizer.rs  openai_google_oauth_resolve.rs  provider_runtime_registry.rs  refresh_coordinator_crossproc.rs  refresh_coordinator_inproc.rs
meerkat-rest/: BUILD.bazel  Cargo.toml
meerkat-rpc/: BUILD.bazel  Cargo.toml
meerkat-runtime/: BUILD.bazel  Cargo.toml
meerkat-schedule/: BUILD.bazel  Cargo.toml
meerkat-session/: BUILD.bazel
meerkat-skills/: BUILD.bazel  Cargo.toml
meerkat-skills/src/: engine.rs  lib.rs  parser.rs  registration.rs  renderer.rs  resolve.rs  resolver.rs
meerkat-skills/src/source/: composite.rs  embedded.rs  filesystem.rs  git.rs  http.rs  mod.rs  protocol.rs  remote.rs
meerkat-skills/tests/: resolver_precedence.rs  transport_sources.rs
meerkat-store/: BUILD.bazel
meerkat-surface-runtime/: Cargo.toml
meerkat-tools/: BUILD.bazel  Cargo.toml
meerkat-web-runtime/: BUILD.bazel  Cargo.toml
meerkat-workgraph/: BUILD.bazel  Cargo.toml
scripts/: agent-gate  audit-effect-authority.sh  bazel-affected-fast-tests.mjs  build-backend-env  buildbuddy-agent-gate  buildbuddy-bazel-poc  buildbuddy-benchmark-fast-lanes  buildbuddy-changed-gate  buildbuddy-ci-dispatch  buildbuddy-ci-full  buildbuddy-ci-lane  buildbuddy-ci-lane-batch  buildbuddy-ci-workspace  buildbuddy-dev  buildbuddy-doctor  buildbuddy-edge-changes  buildbuddy-fast-parity.mjs  buildbuddy-prewarm-lanes  buildbuddy-simulate-scenarios.mjs  bump-sdk-versions.sh  cargo-agent-gate  cargo-exact-tests.mjs  cargo-fast-nextest  check-published-facade-link.sh  check-rust-release-packaging.sh  check_rust_release_packaging.py  ci-pin-rust-toolchain-env  compare-machine-verify-stats.sh  deprecated_backend_scan.sh  e2e-smoke-lane  gcp-buildbuddy-ci-image  gcp-buildbuddy-control-plane  gcp-buildbuddy-executor-pool  generate-bazel-rust-builds.mjs  generate-patch-config.sh  install-build-deps  install-buildbuddy-cli  m0_legacy_surface_scan.sh  machine-authority-changed  pre-push-audit-generated-headers.sh  (+20 more)
xtask/: BUILD.bazel
(+758 files in other folders)
