module(
    name = "meerkat",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
use_repo(buildbuddy, "buildbuddy_toolchain")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
