[package]
name = "meerkat-capabilities"
description = "Feature-owned capability declarations and registry for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
schema = ["dep:schemars"]

[dependencies]
meerkat-core = { workspace = true }
serde = { workspace = true }
inventory = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true, optional = true }

[lints]
workspace = true
