[package]
name = "meerkat-skills"
description = "Skill loading, resolution, and injection for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# HTTP transport is native-only today; wasm resolver paths return a typed
# unavailable transport error when an HTTP repository is configured.
skills-http = ["dep:reqwest", "dep:urlencoding"]

[dependencies]
meerkat-core = { workspace = true }
meerkat-contracts = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
serde_yaml = { workspace = true }
indexmap = "2"
regex = "1"
urlencoding = { version = "2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
wiremock = "0.6"
reqwest = { workspace = true }
urlencoding = "2"

[package.metadata.cargo-machete]
# async-trait, strum: proc macros (derive).
# gix, reqwest, urlencoding, wiremock: pre-declared for the `skills-git` /
# `skills-http` features and the wiremock-driven integration tests. The
# current source/git.rs, source/http.rs, and tests are Wave-b stubs
# described as "wave-c/wave-d rebuild" — deps stay declared so the feature
# surface stays activatable and the real-impl addition doesn't need to
# re-plumb Cargo.toml. cargo-machete ignores them here rather than have
# the workspace lint gate flag pre-declared stubs.
ignored = ["async-trait", "strum", "gix", "reqwest", "urlencoding", "wiremock"]

[lints]
workspace = true
